# polestarfinder

./: .gitignore  __init__.py  alembic.ini  api.py  app.js  buildjson.py  db.py  docker-compose.yml  filterImages.json  filters.py  index.html  pyproject.toml  requirements.txt  run_app.py  run_scraper.py  scrape.py  scrape2.py  stuff.json.txt  test_code_parser.py  test_feature_scan.py  vehicles.db
.github/: copilot-instructions.md
.github/workflows/: deploy-frontend.yml  deploy-lambda.yml  deploy-migrators.yml
alembic/: env.py
alembic/versions/: 6c387ad444e5_added_availability_column.py
backend/: Dockerfile  app.py  db.py  docker-compose.yml  migrate.py  seed_local_db.py
backend/sql/migrations/: 0001_init.sql  0002_price_history.sql
database/: db.py  migrate.py  pgdsn.py  seed_local_db.py
database/sql/migrations/: 0001_init.sql  0002_price_history.sql
frontend/data/: vehicles.json
jobs/: daily_refresh.py  debug_price_history.py  migrate.py  migrator.py  scrape_to_s3.py
public/: app.js  index.html  styles.css
public/data/: vehicles.json
scraper/: code_parser.py  filters.py  scraper.py
